# parallel-range-lite

./: CMakeLists.txt  README.md  main.cpp  parallel-range.hpp  parallel.hpp  tests.cpp  timer.hpp
demo/: CMakeLists.txt  main.cpp
include/: parallel-range.h
lib/: CMakeLists.txt  blockRadixSort.hpp  parallel-range.cpp  sequence.hpp
tests/: CMakeLists.txt  tests.cpp
